# ask-chatgpt

./: .gitignore  AGENTS.md  README.md  VERIFICATION.md  pyproject.toml
daily-notes/: 2026-06-11.md  2026-06-12.md  2026-06-13.md  2026-06-16.md  2026-06-18.md  2026-06-20.md
docs/: BACKLOG.md  DECISIONS.md  DESIGN-SPEC.md  PARALLEL-GPT-RECIPE.md  REWRITE-SPEC.md  USAGE.md  bundle-protocol.md
human/: prompt- buffer.md
issues/: 2026-06-14-capture-renders-dom-not-raw-markdown.md  2026-06-14-out-suppresses-stdout.md  2026-06-14-response-truncated-drops-out-file-and-session.md  2026-06-18-cdp-send-noop-returns-stale-response.md  2026-06-20-cli-leaks-browser-tab-per-invocation.md  2026-06-21-chatgpt-rate-limit-too-many-requests.md  2026-06-22-max-total-wait-skips-out-salvage.md  2026-06-22-scrape-with-attachments-light-path-unverified.md  2026-06-23-human-paced-reactive-chatgpt-traffic.md
orchestration/: NEXT-SESSION-compacted.md  OPERATOR-PAUSE-2026-06-12.md  RESUME-team-lead.json  team.json
scripts/: _m008b_copybtn_check.py  _m008b_diagnose.py  accept_uc1.py  accept_uc1.sh  accept_uc2.py  accept_uc2.sh  accept_uc3.py  accept_uc3.sh  m008b_real_probe.py  m009_real_probe.py  m010_real_probe.py  m011_real_probe.py  m5_capture_measure.py  m6_attachment_enumerate.py  m6_attachment_route_probe.py  m6_download_attachments.py  m7_t3_real.py  m7_t3c_real.py  m7b_t1_discover.py  m7b_t3_verify.py  m7b_t3b_tools.py  m7b_t3c_tools_verify.py  m9_w2_discover.py  m9_w4_smoke.py  m9_w6_reverify.py
team/: START-PROMPT.md  charter.md  team.json
tests/: __init__.py  conftest.py  (+48 more)
(+626 files in other folders)
